# fan_feed_nashseverewx

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  wp_admin_response.rs
static_files/: index.html
static_files/css/: custom-css.css
