[package]
name = "fan_feed_nashseverewx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-files = "0.6.5"
anyhow = "1.0.81"
reqwest = { version = "0.12.2", features = ["json"] }
redis = { version = "0.25.2", features = ["json"] }