[package]
name = "fan_feed_nashseverewx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-cors = "0.7.0"
actix-files = "0.6.5"
anyhow = "1.0.81"
reqwest = { version = "0.12.2", features = ["json"] }
redis = { version = "0.25.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
log = "0.4.21"
env_logger = "0.11.3"